# macro-tracker

./: README.md  database.db  enero.ipynb  play.ipynb  pyproject.toml
data/: food_items.json
pymacro/: dish.py  ingredient.py  meal.py  menu.py
pymacro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pymacro/db/: collections.py  database.py  documents.py  error_handler.py
scripts/: add_ingredients.py
