[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pymacro"

version = "0.1.0"

description = ""

readme = "README.md"

license = { text = "MIT" }

authors = [
    { name = "Alejandro Requena Bermejo", email = "rb.jandro@gmail.com" }
]

dependencies = [
    "python-dotenv==1.0.1",
    "pydantic==2.9.2",
    "sqlalchemy==2.0.36"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["pymacro"]
exclude = ["data", "output"]

